Fixed: - Bug for missing warnings for the 4 ts smells + tests